<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/baseline_fiber_new_24"
            android:title="@string/nouvelle_demande" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_mail_24"
            android:title="@string/boite_de_r_ception" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_library_books_24"
            android:title="@string/brouillon" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/baseline_playlist_add_check_24"
            android:title="@string/particip" />
    </group>

    <item android:title="@string/param_tre">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/baseline_power_settings_new_24"
                android:title="@string/d_connexion" />
        </menu>
    </item>

</menu>
